--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "1.0.0",
   "author": "Chris Biscardi <chris@christopherbiscardi.com>",
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.2.0",
     "@mdx-js/mdx": "^0.16.6",
     "@mdx-js/tag": "^0.16.6",
+    "@rebass/grid": "^6.0.0-7",
     "gatsby": "^2.0.83",
     "gatsby-image": "^2.0.20",
     "gatsby-mdx": "^0.3.2",
@@ -21,7 +23,8 @@
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "rebass": "^3.0.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "typeface-roboto": "^0.0.54"
   },
   "keywords": [
     "gatsby"
@@ -37,13 +40,13 @@
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "prettier": "^1.15.2",
-    "@storybook/react": "^4.1.11",
+    "@babel/core": "^7.2.2",
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addon-links": "^4.1.11",
     "@storybook/addons": "^4.1.11",
-    "@babel/core": "^7.2.2",
-    "babel-loader": "^8.0.5"
+    "@storybook/react": "^4.1.11",
+    "babel-loader": "^8.0.5",
+    "prettier": "^1.15.2"
   },
   "repository": {
     "type": "git",
