--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@mdx-js/mdx": "^0.16.6",
     "@mdx-js/tag": "^0.16.6",
-    "@rebass/grid": "^6.0.0-7",
+    "@rebass/grid": "^6.0.0",
     "gatsby": "^2.0.83",
     "gatsby-image": "^2.0.20",
     "gatsby-mdx": "^0.3.2",
