--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-helmet": "^5.2.0",
+    "react-modal": "^3.8.1",
     "rebass": "^3.0.1",
     "styled-components": "^4.1.3",
     "typeface-roboto": "^0.0.54"
