Updated Sponsors and Call for Speakers Details
Updated Sponsors and Call for Speaker Details

--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "version": "1.0.0",
   "author": "Chris Biscardi <chris@christopherbiscardi.com>",
   "dependencies": {
-    "@babel/plugin-syntax-jsx": "^7.7.4",
+    "@babel/plugin-syntax-jsx": "^7.8.3",
     "@mdx-js/mdx": "^0.16.6",
     "@mdx-js/tag": "^0.16.6",
     "@rebass/grid": "^6.1.0",
-    "gatsby": "^2.18.11",
-    "gatsby-image": "^2.2.36",
+    "gatsby": "^2.19.27",
+    "gatsby-image": "^2.2.42",
+    "gatsby-link": "^2.2.29",
     "gatsby-mdx": "^0.3.2",
-    "gatsby-plugin-google-analytics": "^2.1.31",
-    "gatsby-plugin-manifest": "^2.2.9",
+    "gatsby-plugin-google-analytics": "^2.1.36",
+    "gatsby-plugin-manifest": "^2.2.42",
     "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-sharp": "^2.2.18",
-    "gatsby-plugin-styled-components": "^3.1.16",
-    "gatsby-source-filesystem": "^2.1.42",
-    "gatsby-transformer-sharp": "^2.2.12",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-transformer-sharp": "^2.3.16",
     "prop-types": "^15.6.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.0",
-    "react-modal": "^3.11.1",
+    "react-modal": "^3.11.2",
     "rebass": "^3.2.2",
     "styled-components": "^4.4.1",
     "typeface-roboto": "^0.0.54"
@@ -42,7 +43,7 @@
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
+    "@babel/core": "^7.8.6",
     "@storybook/addon-actions": "^4.1.11",
     "@storybook/addon-links": "^4.1.11",
     "@storybook/addons": "^4.1.11",
